# agents-orchestration

./: README.md  pyproject.toml
docs/: RUNBOOK.md  presenter_demo_flow.mmd  presenter_stakeholder_view.mmd  presenter_story_sequence.mmd  second_hand_agents_plan.mmd
src/second_hand_agents/: __init__.py  config.py
src/second_hand_agents/adapters/: __init__.py  demo_data.py  live_ebay.py  marketplaces.py
src/second_hand_agents/agents/: __init__.py  pipeline.py
src/second_hand_agents/api/: app.py
src/second_hand_agents/cli/: main.py
src/second_hand_agents/schemas/: __init__.py  models.py
src/second_hand_agents/services/: __init__.py  margin.py  normalization.py  ranking.py  workflow.py
tests/integration/: test_workflow.py
tests/unit/: test_live_ebay.py  test_live_llm_workflow.py  test_margin.py  test_ranking.py
