[project]
name = "second-hand-agents"
version = "0.1.0"
description = "Multi-agent demo for sourcing second-hand items with PydanticAI"
readme = "README.md"
authors = [{ name = "eu", email = "eugen@ecton.io" }]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "pydantic>=2.11.3",
    "pydantic-ai>=0.0.58",
    "pydantic-settings>=2.10.1",
    "rich>=14.1.0",
    "typer>=0.19.2",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.13.2",
]

[project.scripts]
second-hand-agents = "second_hand_agents.cli.main:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

